# SolarPipe

./: .gitignore  ARCHITECTURAL_DECISIONS.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_RULES.md  Directory.Packages.props  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  README_TRACKER_PLAN.md  SolarPipe.sln  SolarPipe_Architecture_Plan.docx  TRACKER_AND_PLAN_SUMMARY.md  docker-compose.yml  run_dark_model.ps1  run_sweep.ps1  run_syntax_check.ps1  run_tft.ps1
data/: .gitignore  ARCHITECTURAL_DECISIONS.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_RULES.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  SolarPipe_Data_Acquisition_Plan.md  pyproject.toml
data/configs/: default.yaml  flux_rope_propagation_v1.yaml
data/scripts/: audit_data.py  check_api_keys.py  port_solar_data.py  run_live_ingest.py  validate_db.py
data/sequences/: holdout_sequences.parquet
data/src/solarpipe_data/: __init__.py  __main__.py  cli.py  config.py
data/tests/fixtures/: cdaw_month_sample.html  donki_analysis_sample.json  donki_cme_sample.json  donki_enlil_sample.json  donki_flares_sample.json  donki_gst_sample.json  donki_ips_sample.json  goes_flares_sample.json  kyoto_dst_sample.html  swpc_mag_sample.json  swpc_plasma_sample.json
data/tests/integration/: test_phase2_cdaw.py  test_phase2_flares.py  test_phase6_e2e.py  (+1 more)
data/validation/: ccmc_scoreboard_2026.csv  historical_events_meta.csv  historical_predict_index_map.csv  historical_predict_input.csv  historical_predict_input_clean.csv  historical_predict_input_valid.csv  observed_transits_2026.csv  predict_input_2026_apr.csv
(+1888 files in other folders)
