[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "solarpipe-data"
version = "0.1.0"
description = "SolarPipe data acquisition pipeline — CME event ingestion and feature assembly"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "scipy>=1.12",
    "sunpy>=5.1",
    "drms>=0.7",
    "astropy>=6.0",
    "click>=8.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
solarpipe-data = "solarpipe_data.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "unit: fully offline, uses tests/fixtures/, mock HTTP with pytest-httpx",
    "integration: requires staging.db, no live network",
    "live: makes real API calls, excluded from CI",
]

[tool.isort]
profile = "black"
